# akobato

./: .dockerignore  .sesskey  CLAUDE.md  Dockerfile  FOLDER_STRUCTURE.md  README.md  UPGRADE.md  index.html  main.py  pyproject.toml  script.js  style.css  supabase_setup.sql
.github/workflows/: sync_to_hf.yml
components/: arena.py  layout.py  verdicts.py
dbscript/: 01_tables.sql  02_functions.sql  03_rls.sql  03_tokens.sql  04_indexes.sql  05_verify.sql  06_alias.sql
models/: schemas.py
pages/: arena.py  category.py  dashboard.py  landing.py  login.py  profile.py  roast.py  room.py
routes/: auth.py  dashboard.py  game.py  leaderboard.py  profile.py  roast.py  ws.py
services/: ai_judge.py  avatar.py  cache.py  news_fetcher.py
static/: manifest.json
static/css/: custom.css  landing.css
static/js/: landing.js  sfx.js  sw.js
